sys/boot/uboot/common/main.c
@@ -2057,7 +2057,7 @@ argument_list|)
 expr_stmt|;
 name|printf
 argument_list|(
-literal|"Booting from %s %\n"
+literal|"Booting from %s\n"
 argument_list|,
 name|ldev
 argument_list|)
